# AAT-Training

./: .gitignore  README.md  pyproject.toml  requirements-training.txt
configs/training/: classical_v1.yaml  efficientnet_b0_v1.yaml  folds_v1.yaml  inception_v3_proposal_v1.yaml  label_policy_v1.yaml  preprocessing_v1.yaml  rare_v1.yaml  resnet18_v1.yaml  resnet50_proposal_v1.yaml
docs/: aat_cloud_training_beginner_guide.md  aat_training_pipeline_usage.md
scripts/: audit_training_duplicates.py  build_training_folds.py  build_training_inputs.py  build_training_snapshot.py  evaluate_rare_assistance.py  generate_training_report.py  train_classical_baselines.py  train_cnn_baselines.py
scripts/cloud/: bootstrap_autodl.sh  continue_formal_cnn_sequence.sh  gpu_smoke.py  run_snapshot_smoke.sh  verify_cloud_environment.py
src/aat_training/: __init__.py  augmentations.py  classical.py  cnn.py  cnn_resume.py  duplicates.py  experiments.py  folds.py  labels.py  metrics.py  predictions.py  preprocessing.py  rare.py  reporting.py  snapshot.py
tests/: test_training_classical.py  test_training_cnn.py  test_training_cnn_resume.py  test_training_duplicates.py  test_training_experiments.py  test_training_folds.py  test_training_labels.py  test_training_metrics.py  test_training_preprocessing.py  test_training_rare.py  test_training_reporting.py  test_training_scripts.py  test_training_snapshot.py
