[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aat-training"
version = "0.1.0"
description = "Reproducible AAT lane classification and rare-phenotype assistance"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10",
  "PyYAML>=6",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

